Slightly tangential, fix a minor layout issue in the generic modal header close button

--- a/client/src/components/modals_and_popovers/bootstrap_modal_exstension.scss
+++ b/client/src/components/modals_and_popovers/bootstrap_modal_exstension.scss
@@ -20,6 +20,7 @@ $margin: 30px;
   }
 }
 .modal-dialog__header-footer-layout {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
